<resources>
    <string name="app_name">Expense Tracker</string>

    <!--    activity_main-->
    <string name="name_input">Enter a username</string>
    <string name="password_input">Enter password</string>
    <string name="login_btn">Login</string>

    <!--    activity_tab-->
    <string name="save_goal_tab">Save Goal</string>
    <string name="income_expense_tab">Income/Expense</string>

    <!--    fragment_save_goal-->
    <string name="fragment_save_goal">Save Goal</string>
    <string name="save_goal_frag_txt">Your Current Save Goal:</string>
    <string name="save_goal_frag_btn">Create A New Save Goal</string>
    <string name="btn_api">GO TO API</string>

    <!--    fragment_income_expense-->
    <string name="fragment_income_expense">Income/Expense</string>"
    <string name="more_action_btn">More Actions</string>

    <!--    add_income_expense_dialog-->
    <string name="income_expense_txt_view">Income or Expense:</string>
    <string name="income_expense_edit_txt">Enter Income or Expense</string>
    <string name="category_txt_view">Category:</string>
    <string name="category_edit_txt">Enter the category</string>
    <string name="amount_txt_view">Amount:</string>
    <string name="amount_edit_txt">Enter the amount</string>
    <string name="date_txt_view">Date:</string>
    <string name="date_edit_txt">Enter the date (yyMMdd)</string>
    <string name="add_btn">Add</string>

    <!--    search_income_expense_dialog-->
    <string name="search_txt_view">Search:</string>
    <string name="search_edit_txt">Enter Category</string>
    <string name="search_btn">Search</string>

    <!--    menu_main-->
    <string name="menu_add">Add Income/Expense</string>
    <string name="menu_search">Search for Income/Expense</string>
    <string name="menu_exit">Exit</string>

    <!--    context_menu-->
    <string name="delete_item">Delete</string>

    <!--    activity_create_new_save_goal-->
    <string name="create_save_goal_txt">You are creating a new save goal!</string>
    <string name="goal_name_edit_txt">Enter the name of goal</string>
    <string name="total_amount_edit_txt">Enter the total amount</string>
    <string name="length_of_period_edit_txt">Enter length of period (months)</string>
    <string name="low_amount_reminder_edit_txt">Reminder for low save left (alternative)</string>
    <string name="create_btn">Create</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--    activity_api-->
    <string name="btn_get">GET REQUEST</string>
    <string name="btn_post">POST REQUEST</string>
    <string name="btn_put">PUT REQUEST</string>
    <string name="btn_delete">DELETE REQUEST</string>
    <string name="txt_result">Request Result Here</string>

    <!--    context_menu_user_api-->
    <string name="context_menu_item_1">View Details</string>
</resources>
